Fix map_p, filter_map_p and convert irmin-fs

--- a/src/irmin-fs/dune
+++ b/src/irmin-fs/dune
@@ -1,7 +1,7 @@
 (library
  (name irmin_fs)
  (public_name irmin-fs)
- (libraries astring irmin logs lwt)
+ (libraries astring irmin logs)
  (preprocess
   (pps ppx_irmin.internal))
  (instrumentation
