--- a/irmin.opam
+++ b/irmin.opam
@@ -21,7 +21,7 @@ depends: [
   "uri"     {>= "1.3.12"}
   "uutf"
   "jsonm"   {>= "1.0.0"}
-  "lwt"     {>= "5.3.0"}
+  "eio"     {>= "0.2"}
   "digestif" {>= "0.9.0"}
   "ocamlgraph"
   "logs"    {>= "0.5.0"}
@@ -32,11 +32,16 @@ depends: [
   "ppx_irmin" {= version}
   "hex"      {with-test}
   "alcotest" {>= "1.1.0" & with-test}
+  "eio_main" {>= "0.2" & with-test}
   "alcotest-lwt" {with-test}
   "qcheck-alcotest" {with-test}
   "vector" {with-test}
   "odoc" {(< "2.0.1" | > "2.0.2") & with-doc} # See https://github.com/ocaml/odoc/issues/793
   "bisect_ppx" {dev & >= "2.5.0"}
+]
+
+pin-depends: [
+  [ "eio.0.2" "git+https://github.com/TheLortex/eio#d2f0cfc08e1d9859fb56c09cb04b49bced602400" ]
 ]
 
 conflicts: [
