--- a/src/irmin-fs/unix/dune
+++ b/src/irmin-fs/unix/dune
@@ -1,7 +1,7 @@
 (library
  (public_name irmin-fs.unix)
  (name irmin_fs_unix)
- (libraries irmin-fs irmin.unix lwt.unix)
+ (libraries irmin-fs irmin.unix lwt eio eio.unix)
  (preprocess
   (pps ppx_irmin.internal))
  (instrumentation
