--- a/test/irmin-chunk/dune
+++ b/test/irmin-chunk/dune
@@ -6,7 +6,7 @@
 (executable
  (name test)
  (modules test)
- (libraries alcotest fmt irmin irmin-test lwt lwt.unix test_chunk))
+ (libraries alcotest fmt irmin irmin-test eio_main test_chunk))
 
 (rule
  (alias runtest)
