Update to eio.0.7 and catch IO errors

--- a/test/irmin/generic-key/dune
+++ b/test/irmin/generic-key/dune
@@ -4,10 +4,4 @@
  (package irmin-test)
  (preprocess
   (pps ppx_irmin.internal))
- (libraries
-  irmin
-  eio_main
-  irmin.mem
-  irmin-test
-  alcotest
-  vector))
+ (libraries irmin eio_main irmin.mem irmin-test alcotest vector))
