--- a/examples/irmin-pack/dune
+++ b/examples/irmin-pack/dune
@@ -1,3 +1,3 @@
 (executables
  (names gc kv)
- (libraries irmin irmin.unix irmin-pack.unix logs))
+ (libraries irmin irmin.unix irmin-pack.unix logs eio_main))
