Fix irmin-git using lwt_eio

--- a/src/irmin-git/dune
+++ b/src/irmin-git/dune
@@ -1,7 +1,19 @@
 (library
  (name irmin_git)
  (public_name irmin-git)
- (libraries astring cstruct fmt fpath git irmin logs lwt uri irmin.mem mimic)
+ (libraries
+  astring
+  cstruct
+  fmt
+  fpath
+  git
+  irmin
+  logs
+  lwt
+  lwt_eio
+  uri
+  irmin.mem
+  mimic)
  (preprocess
   (pps ppx_irmin.internal))
  (instrumentation
