--- a/src/irmin-git/unix/dune
+++ b/src/irmin-git/unix/dune
@@ -1,7 +1,7 @@
 (library
  (public_name irmin-git.unix)
  (name irmin_git_unix)
- (libraries cohttp-lwt-unix git-unix irmin-git irmin.unix lwt.unix)
+ (libraries cohttp-lwt-unix git-unix irmin-git irmin.unix lwt.unix lwt_eio)
  (preprocess
   (pps ppx_irmin.internal))
  (instrumentation
